# paddlex-dev

./: .gitignore  README.md  _train.sh  add&split_newdata.sh  augment_rotation.py  compare.py  evaluate.sh  export.sh  fine_tuning_files_structure.md  main.py  model_config.yaml  model_config_example.yaml  predict.py  pyproject.toml  requirements.txt  test_performance.py  train.sh  train_config.yaml  train_test.txt
.devcontainer/: Dockerfile  devcontainer.json  setup-git.sh
PaddleX/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_en.md  install_pdx.py  main.py  mkdocs.yml  setup.py
PaddleX/.github/ISSUE_TEMPLATE/: 1_data.md  2--paddlex-api----.md  3_deploy.md  4_gui.md  5_other.md  6_hardware_contribute.md
PaddleX/.github/workflows/: deploy_docs.yml  xpu_ci.yml
PaddleX/.precommit/: check_imports.py  check_license_headers.py  clang_format.hook
PaddleX/api_examples/pipelines/: test_ocr.py  (+26 more)
PaddleX/deploy/hps/sdk/paddlex-hps-client/: pyproject.toml  requirements.txt
PaddleX/deploy/hps/sdk/paddlex-hps-client/scripts/: build_wheel.sh
PaddleX/deploy/hps/sdk/paddlex-hps-client/src/paddlex_hps_client/: __init__.py  constants.py  request.py  utils.py
PaddleX/docs/: CHANGELOG.en.md  CHANGELOG.md  FAQ.en.md  FAQ.md  VisualDL.en.md  VisualDL.md  index.en.md  index.md
PaddleX/paddlex/: __init__.py  __main__.py  constants.py  engine.py  hpip_links.html  hpip_links_cu12.html  model.py  paddlex_cli.py  version.py
PaddleX/tests/: run_xpu_ci.sh
dataset/text_image_orientation/: train.txt  val.txt
doc/: README.md
utils/: calculate_mean_std_example.py
(+2651 files in other folders)
