[build-system]
requires = ["setuptools >= 69"]
build-backend = "setuptools.build_meta"

[project]
name = "paddlex-hps-client"
version = "0.3.0"
dependencies = [
    "numpy >= 1.24",
    # XXX: Not sure about the backward compatibility
    "tritonclient [grpc] >= 2.30.0",
]

[tool.isort]
profile = "black"
src_paths = ["src"]
